skoot routes paragraphs margin decreased to display correctly on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -746,6 +746,14 @@ h1 {
     margin-bottom: 3rem;
 }
 
+/* Skoot Route Page */
+
+p.skoot-route {
+    margin: 2rem;
+}
+
+
+
 }
 
 /*-----------------------------Tablet-----------------------------*/
